# fastapi-typed-client

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
examples/: birthday_app.py  birthday_app_client.py  test_birthday_app_regular.py  test_birthday_app_with_client.py
src/fastapi_typed_client/: __init__.py  _core.py  _generator.py  _parser.py  client.py
src/fastapi_typed_client/_utils/: import_.py
tests/: client_tester.py  conftest.py  shared.py  test_cli.py
tests/test_core/: test_app_or_import_str_behavior.py  test_illegal_apps.py  test_import_client_base.py  test_include_router.py  test_misc.py  test_multiple_responses.py  test_overlapping_names.py  test_params.py  test_params_file_form.py  test_params_from_depends.py  test_params_from_security.py  test_result.py  test_stream_incremental.py  test_stream_json_lines.py  test_stream_raw.py  test_stream_sse.py  test_streaming_json_response.py  test_timeout.py  test_unuspported_apps.py
tests/test_utils/: test_import_utils.py  test_string_utils.py
